[gd_scene load_steps=3 format=3 uid="uid://dgn8v0ix0ub4b"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_d53t4"]
[ext_resource type="FontFile" uid="uid://cludkx5y8fxgl" path="res://KoddiUDOnGothic-ExtraBold.ttf" id="2_yvcxx"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d53t4")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="title" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_yvcxx")
theme_override_font_sizes/font_size = 60
text = "SOCIAL ENGINEER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Btn_Tutorial" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -178.0
offset_right = 2.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
text = "Tutorial : 신입 교육"

[node name="Btn_Mission1" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -147.0
offset_right = 2.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "MISSION 01: 인사팀의 비밀
"

[node name="Btn_Mission2" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -118.0
offset_right = 1.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "MISSION 02: 인스타 스토킹"

[node name="Btn_Mission3" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -88.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "MISSION 03: 엄마의 약점"

[node name="Btn_Mission4" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -57.0
offset_right = -1.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "MISSION 04: 비서의 복수"

[node name="Btn_Quit" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
grow_vertical = 0
text = "시스템 종료"

[node name="player_name" type="Label" parent="."]
layout_mode = 1
offset_right = 97.0
offset_bottom = 20.0
text = "플레이어 이름 :"

[node name="nameinput" type="LineEdit" parent="player_name"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 6.0
offset_right = 237.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Code Name"

[node name="player_rname" type="Label" parent="player_name"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 8.0
offset_top = 3.0
offset_right = 166.0
offset_bottom = 23.0
grow_horizontal = 0
