extends Control

@onready var btn_mission_Tutorial = $ColorRect/Btn_Tutorial
@onready var btn_mission1 = $ColorRect/Btn_Mission1
@onready var btn_mission2 = $ColorRect/Btn_Mission2
@onready var btn_mission3 = $ColorRect/Btn_Mission3
@onready var btn_mission4 = $ColorRect/Btn_Mission4
@onready var btn_quit = $ColorRect/Btn_Quit
@onready var http_request = $HTTPRequest # ì”¬ì— ì¶”ê°€ í•„ìš”!
@onready var name_input = $player_name/nameinput

# ê²Œì„ í™”ë©´ ì”¬ ë¯¸ë¦¬ ë¡œë“œ
var desktop_scene = preload("res://desktop.tscn")

func _ready():
	#ë¯¸ì…˜ 1 ë²„íŠ¼ í´ë¦­ì‹œ í˜¸ì¶œ
	btn_mission1.pressed.connect(_on_mission_1_pressed)
	#ë¯¸ì…˜ 2 ë²„íŠ¼ í´ë¦­ì‹œ í˜¸ì¶œ
	btn_mission2.pressed.connect(_on_mission_2_pressed)
	#ë¯¸ì…˜ 3 ë²„íŠ¼ í´ë¦­ì‹œ í˜¸ì¶œ
	btn_mission3.pressed.connect(_on_mission_3_pressed)
	#ë¯¸ì…˜ 4 ë²„íŠ¼ í´ë¦­ì‹œ í˜¸ì¶œ
	btn_mission4.pressed.connect(_on_mission_4_pressed)
	
	btn_mission_Tutorial.pressed.connect(_on_mission_Tutorial_pressed)
	btn_quit.pressed.connect(get_tree().quit)
	_update_buttons()

func _update_buttons():
	# 1. ì¼ë‹¨ íŠœí† ë¦¬ì–¼ì€ í•­ìƒ ì—´ì–´ë‘ 
	btn_mission_Tutorial.disabled = false
	
	# 2. ë¯¸ì…˜ì€ ê¸°ë³¸ì ìœ¼ë¡œ ì ê¸ˆ (ë¯¸ì…˜ì„ í•˜ë‚˜ì”© í´ë¦¬ì–´í•˜ë©´ ì ê¸ˆ í•´ì œ)
	btn_mission1.disabled = true
	btn_mission1.text = "ğŸ”’ Mission 1 (ì ê¹€)" # ì ê¸ˆ í‘œì‹œ í…ìŠ¤íŠ¸ ë³€ê²½
	btn_mission2.text = "ğŸ”’ Mission 2 (ì ê¹€)"
	btn_mission3.text = "ğŸ”’ Mission 3 (ì ê¹€)"
	btn_mission4.text = "ğŸ”’ Mission 4 (ì ê¹€)"
	
	# 3. íŠœí† ë¦¬ì–¼ í´ë¦¬ì–´ ì—¬ë¶€ í™•ì¸
	if "mission_Tutorial" in Global.cleared_missions:
		btn_mission1.disabled = false
		btn_mission1.text = "Mission 1: ê·¸ë¦¼ì ì¸ì‚¬" # ì›ë˜ í…ìŠ¤íŠ¸ ë³µêµ¬
	
	# ì´ì „ ë¯¸ì…˜ì´ í´ë¦¬ì–´ í•˜ì˜€ëŠ”ì§€ ì—¬ë¶€ í™•ì¸ í›„ ë¯¸ì…˜ ê°œë°©
	if "mission_1" in Global.cleared_missions:
		btn_mission2.disabled = false
		btn_mission2.text = "Mission 2: ì¸ìŠ¤íƒ€ ìŠ¤í† í‚¹"
		
	if "mission_2" in Global.cleared_missions:
		btn_mission3.disabled = false
		btn_mission3.text = "Mission 3: ì—„ë§ˆì˜ ì•½ì "
		
	if "mission_3" in Global.cleared_missions:
		btn_mission4.disabled = false
		btn_mission4.text = "Mission 4: ë¹„ì„œì˜ ë³µìˆ˜"	
func _on_mission_Tutorial_pressed():
	print("ğŸš€ íŠœí† ë¦¬ì–¼ ì‹œì‘ ìš”ì²­...")
	# 2. ê²Œì„ í™”ë©´ìœ¼ë¡œ ì „í™˜
	_start_game("mission_Tutorial")
	
func _on_mission_1_pressed():
	print("ğŸš€ ë¯¸ì…˜ 1 ì‹œì‘ ìš”ì²­...")
	# 2. ê²Œì„ í™”ë©´ìœ¼ë¡œ ì „í™˜
	_start_game("mission_1")
	
func _on_mission_2_pressed():
	print("ğŸš€ ë¯¸ì…˜ 2 ì‹œì‘ ìš”ì²­...")
	# 2. ê²Œì„ í™”ë©´ìœ¼ë¡œ ì „í™˜
	_start_game("mission_2")
	
func _on_mission_3_pressed():
	print("ğŸš€ ë¯¸ì…˜ 3 ì‹œì‘ ìš”ì²­...")
	# 2. ê²Œì„ í™”ë©´ìœ¼ë¡œ ì „í™˜
	_start_game("mission_3")

func _on_mission_4_pressed():
	print("ğŸš€ ë¯¸ì…˜ 4 ì‹œì‘ ìš”ì²­...")
	# 2. ê²Œì„ í™”ë©´ìœ¼ë¡œ ì „í™˜
	_start_game("mission_4")
	
func _start_game(scenario_id):
	var input_name = name_input.text.strip_edges()
	if input_name != "":
		Global.player_name = input_name
	else:
		Global.player_name = "Hacker" # ì…ë ¥ ì•ˆ í–ˆì„ ë•Œ ê¸°ë³¸ ì´ë¦„

	# Globalì— í˜„ì¬ ì‹œë‚˜ë¦¬ì˜¤ ì €ì¥ (ë‚˜ì¤‘ì— ì•±ë“¤ì´ ì´ê±¸ ì°¸ì¡°)
	Global.current_scenario = scenario_id
	# ì”¬ ì „í™˜
	get_tree().change_scene_to_packed(desktop_scene)
